# karrio

./: .coveragerc  .cursorignore  .dockerignore  .editorconfig  .env  .env-file  .env.grafana-test  .env.local  .env.sample  .gitignore  .gitmodules  .npmrc  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CARRIER_INTEGRATION_FAQ.md  CARRIER_INTEGRATION_GUIDE.md  CARRIER_INTEGRATION_PROMPT_TEMPLATE.md  CARRIER_SCRIPTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CREATE_ORDER_SHADCN_MIGRATION_PLAN.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  JTL_HUB_AUTH_FLOW.md  JTL_HUB_SSO_INTEGRATION.md  LICENSE  MANIFEST.in  ORDERS_MIGRATION_PLAN.md  Pipfile  Procfile  README.docker.md  README.md  SETUP-GUIDE-WINDOWS.md  SHIPMENTS_MIGRATION_PLAN.md  SPRINT_MCP.md  VERSION  (+64 more)
andreani/: pyproject.toml  setup.py
andreani/andreani_lib/: order_request.py  order_response.py  rate_request.py  rate_response.py  shipping.py  tracking.py
andreani/schemas/: rate_response.json
apps/api/: MANIFEST.in  gunicorn-cfg.py  package.json  pyproject.toml  setup.py
aramex/: README.md  pyproject.toml  setup.py
aramex/aramex_lib/: array_of_string.py  datatypes.py  location.py  rates.py  shipping.py  tracking.py
aramex/schemas/: array_of_string.xsd  datatypes.xsd  location.xsd  rates.xsd  shipping.xsd  tracking.xsd
canadapost/: generate.sh  pyproject.toml  setup.py
canadapost/canadapost_lib/: common.py  customerinfo.py  discovery.py  ncshipment.py  openreturn.py  shipment.py
canadapost/schemas/: merchantregistration.xsd  shipment.xsd
dhl_ecommerce/: README.md  generate.sh  pyproject.toml  setup.py
dhl_ecommerce/dhl_ecommerce_lib/: shipping_request_v1.py  shipping_request_v3.py  shipping_response_v1.py  shipping_response_v3.py  tracking.py
dhl_ecommerce/schemas/: shipping_request_v1.json  shipping_request_v3.json  shipping_response_v1.json  shipping_response_v3.json  tracking.json
dicom/: pyproject.toml  setup.py
dicom/dicom_lib/: tracking.py
dicom/schemas/: pickups.json  tracking.json
extensions/boxknight/: README.md  pyproject.toml  setup.py
extensions/canpar/: README.md  pyproject.toml  setup.py
extensions/dhl_express/: README.md  pyproject.toml  setup.py
extensions/fedex/: README.md  pyproject.toml  setup.py
extensions/purolator/: README.md  pyproject.toml  setup.py
extensions/purolator_courier/: README.md  pyproject.toml  setup.py
extensions/sendle/: README.md  pyproject.toml
extensions/sf_express/: README.md  pyproject.toml
extensions/tnt/: README.md  pyproject.toml  setup.py
extensions/ups_package/: README.md  pyproject.toml  setup.py
extensions/usps_international/: README.md  pyproject.toml
modules/cli/: README.md  __main__.py  pyproject.toml  utils.py
modules/cli/commands/: carrier.py  docs.py  login.py  plugin.py  sdk.py  templates.py  test_transform.py  utils.py
modules/cli/docs/: CLI_IMPROVEMENTS.md
modules/cli/karrio_cli/: __main__.py
modules/documents/: README.md  pyproject.toml  setup.py
modules/graph/: README.md  pyproject.toml  setup.py
modules/huey/: pyproject.toml
modules/jtl/: README.md  pyproject.toml
modules/manager/: README.md  pyproject.toml  setup.py
purplship/: LICENSE  README.md  VERSION  __init__.py  pyproject.toml  references.py
purplship/api/: __init__.py  gateway.py  interface.py  mapper.py  proxy.py
purplship/core/: __init__.py  errors.py  models.py  settings.py  units.py
purplship/domain/: __init__.py  client.py  interface.py  mapper.py  proxy.py
purplship/eshipper/: mypy.ini  script.sh  setup.py
purplship/freight/: __init__.py  gateway.py  interface.py  mapper.py  proxy.py
purplship/freightcom/: README.md  mypy.ini  script.sh  setup.py
purplship/mappers/: __init__.py  gateway.py
purplship/package/: __init__.py  gateway.py  interface.py  mapper.py  proxy.py
purplship/purplship/: references.py
purplship/purplship-eshipper/: generate.sh  mypy.ini  requirements.dev.txt  requirements.txt  script.sh  setup.py
purplship/purplship-freightcom/: generate.sh  mypy.ini  requirements.dev.txt  setup.py
purplship/shipping/: __init__.py  gateway.py  interface.py
sdk/: LICENSE  README.md  cli.py  pyproject.toml
sdk/core/: README.md  pyproject.toml  setup.py
sdk/docs/: index.md  references.md
sdk/vendors/: README.md
sendle/: generate.sh  pyproject.toml  setup.py
sendle/schemas/: orders.json  tracking.json
sendle/sendle_lib/: order_request.py  orders.py  quotes.py  tracking.py  tracking_response.py  validation_error.py
soap/: .gitignore  LICENSE  generate.sh  pyproject.toml  requirements.txt
usps/: generate.sh  pyproject.toml  setup.py
usps/schemas/: CarrierPickupInquiryResponse.xsd  IntlRateV2Response.xsd  PTSPODRequest.xsd  PriorityMailRequest.xsd  StandardBResponse.xsd  TrackFieldRequest.xsd  eVSCancelResponse.xsd  eVSExpressMailIntlResponse.xsd  eVSFirstClassMailIntlRequest.xsd  eVSGXGGetLabelRequest.xsd  eVSICancelRequest.xsd  eVSPriorityMailIntlRequest.xsd  eVSRequest.xsd
usps/usps_lib/: address_validate_request.py  carrier_pickup_availability_request.py  carrier_pickup_availability_response.py  carrier_pickup_cancel_response.py  carrier_pickup_change_request.py  carrier_pickup_inquiry_request.py  carrier_pickup_inquiry_response.py  carrier_pickup_schedule_request.py  carrier_pickup_schedule_response.py  city_state_lookup_response.py  emrsv4_0_bulk_request.py  error.py  evs_cancel_request.py  evs_cancel_response.py  evs_express_mail_intl_response.py  evs_gxg_get_label_request.py  evs_gxg_get_label_response.py  evs_priority_mail_intl_request.py  evs_priority_mail_intl_response.py  evs_request.py  evsi_cancel_request.py  hfp_facility_info_request.py  hfp_facility_info_response.py  intl_rate_v2_response.py  priority_mail_request.py  priority_mail_response.py  pts_email_request.py  pts_emailresult.py  ptspod_result.py  ptsrre_request.py  ptsrre_result.py  scan_request.py  sdc_get_locations_response.py  standard_b_request.py  track_field_request.py  track_request.py  track_response.py
yanwen/: README.md  generate.sh  pyproject.toml
yanwen/yanwen_lib/: tracking.py
(+13149 files in other folders)
