[tool.poetry]
name = "purplship.dev"
version = "0.0.1"
description = "Purplship Dev Env"
authors = ["Dan Kobina <danielkobina@gmail.com>"]
license = "LGPLv3"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.20.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
coverage = "^5.4"
mypy = "^0.800"
click = "^7.1.2"
Jinja2 = "^2.11.2"
mkdocs-material = "^6.2.6"
"purplship" = {path = "purplship", develop = true}
"purplship.boxknight" = {path = "extensions/boxknight", develop = true}
"purplship.canadapost" = {path = "extensions/canadapost", develop = true}
"purplship.canpar" = {path = "extensions/canpar", develop = true}
"purplship.dhl_express" = {path = "extensions/dhl_express", develop = true}
"purplship.dicom" = {path = "extensions/dicom", develop = true}
"purplship.purolator-courier" = {path = "extensions/purolator_courier", develop = true}
"purplship.fedex" = {path = "extensions/fedex", develop = true}
"purplship.fedex_express" = {path = "extensions/fedex_express", develop = true}
"purplship.ups" = {path = "extensions/ups", develop = true}
"purplship.ups_package" = {path = "extensions/ups_package", develop = true}
"purplship.usps" = {path = "extensions/usps", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools!=50.0"]
build-backend = "poetry.core.masonry.api"
