[tool.poetry]
name = "carrier.dicom"
version = "2020.11.1-beta"
description = "Dicom Web API Schemas Python Data Types library"
repository="https://github.com/PurplShip/purplship-carriers"
homepage="https://github.com/PurplShip/purplship-carriers/tree/master/carrier.dicom"
authors = ["Dan Kobina <danielkobina@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "dicom_lib" }
]
classifiers = [
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.6"
jstruct = "^2020.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
