[tool.poetry]
name = "purplship"
version = "2021.1"
homepage="https://sdk.purplship.com"
repository="https://github.com/PurplShip/purplship"
description = "Multi-carrier shipping API integration with python"
authors = ["Dan Kobina <danielkobina@gmail.com>"]
license = "LGPLv3"
readme = "README.md"
packages = [{ include = "purplship" }]
classifiers=[
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

[tool.poetry.dependencies]
python = "^3.7"
jstruct = "^2020.4.0"
lxml = "^4.6.2"
lxml-stubs = "^0.1.1"
py-soap = "^2020.3.2"
xmltodict = "^0.12.0"
phonenumbers = "^8.12.17"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
