[tool.poetry]
name = "purplship.sdk"
version = "0.0.0"
description = "purplship sdk env"
authors = ["Purplship <hello@purplship.com>"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
"purplship" = {path = "core", develop = true}
"purplship.aramex" = {path = "extensions/aramex", develop = true}
"purplship.australiapost" = {path = "extensions/australiapost", develop = true}
"purplship.boxknight" = {path = "extensions/boxknight", develop = true}
"purplship.canadapost" = {path = "extensions/canadapost", develop = true}
"purplship.canpar" = {path = "extensions/canpar", develop = true}
"purplship.dhl_express" = {path = "extensions/dhl_express", develop = true}
"purplship.dhl_universal" = {path = "extensions/dhl_universal", develop = true}
"purplship.dicom" = {path = "extensions/dicom", develop = true}
"purplship.fedex" = {path = "extensions/fedex", develop = true}
"purplship.purolator" = {path = "extensions/purolator", develop = true}
"purplship.royalmail" = {path = "extensions/royalmail", develop = true}
"purplship.sendle" = {path = "extensions/sendle", develop = true}
"purplship.sf_express" = {path = "extensions/sf_express", develop = true}
"purplship.tnt" = {path = "extensions/tnt", develop = true}
"purplship.ups" = {path = "extensions/ups", develop = true}
"purplship.usps" = {path = "extensions/usps", develop = true}
"purplship.usps_international" = {path = "extensions/usps_international", develop = true}
"purplship.yanwen" = {path = "extensions/yanwen", develop = true}
"purplship.yunexpress" = {path = "extensions/yunexpress", develop = true}
"purplship.eshipper" = {path = "vendors/eshipper", develop = true}
"purplship.freightcom" = {path = "vendors/freightcom", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools!=50.0"]
build-backend = "poetry.core.masonry.api"
