[tool.poetry]
name = "carrier.usps"
version = "2021.2-beta"
description = "USPS Web API Schemas Python Data Types library"
repository="https://github.com/PurplShip/purplship-carriers"
homepage="https://github.com/PurplShip/purplship-carriers/tree/master/carrier.usps"
authors = ["Dan Kobina <danielkobina@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "usps_lib" }
]
classifiers = [
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.6"
six = "^1.15.0"
lxml = "^4.6.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools!=50.0"]
build-backend = "poetry.core.masonry.api"
