[tool.poetry]
name = "purplship.boxknight"
version = "2021.1"
homepage="https://sdk.purplship.com"
repository="https://github.com/PurplShip/purplship"
description = "Purplship - Boxknight Shipping Extension"
authors = ["Dan Kobina <danielkobina@gmail.com>"]
license = "LGPLv3"
readme = "README.md"
packages = [{ include = "purplship" }]
classifiers=[
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

[tool.poetry.dependencies]
python = "^3.7"
"purplship" = "^2021.1"
"carrier.boxknight" = "^2020.11.1b0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "xxx"
url = "/Users/danielkobina/Wheels"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
