[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karrio-cli"
version = "2025.5rc10"
description = "Command line interface for Karrio"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Karrio Team", email = "hello@karrio.io"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.7.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "importlib-metadata>=4.12.0",
    "jstruct>=0.1.0",
    "generateDS",
    "tabulate",
    "Jinja2",
]

[project.optional-dependencies]
dev = [
    "google-adk",
    "python-dotenv",
    "karrio",
    "beautifulsoup4",
    "pdfplumber"
]

[project.scripts]
kcli = "karrio_cli.__main__:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["karrio_cli", "karrio_cli.*"]

[tool.setuptools.package-data]
"karrio_cli" = ["templates/**/*"]
"*" = ["*.py", "*.txt", "*.md", "*.json"]

[project.urls]
Homepage = "https://github.com/karrioapi/karrio"
"Bug Tracker" = "https://github.com/karrioapi/karrio/issues"
