[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karrio_server_documents"
version = "2026.1.12"
description = "Multi-carrier shipping API apps module"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0"
authors = [
    {name = "karrio", email = "hello@karrio.io"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyzint",
    "weasyprint",
    "karrio_server_core",
    "karrio_server_graph",
    "karrio_server_manager",
]

[project.urls]
Homepage = "https://github.com/karrioapi/karrio"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
exclude = ["tests.*", "tests"]
namespaces = true
