[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "karrio.server.jtl"
version = "2024.10.0"
description = "JTL Custom core module for Karrio"
authors = ["Karrio Team <hello@karrio.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "karrio" },
]

[tool.poetry.dependencies]
python = "^3.8"
karrio-server-core = "*"
PyJWT = {version = "^2.8.0", extras = ["crypto"]}
cryptography = "^43.0.0"  # Required for EdDSA (Ed25519) support
requests = "^2.31.0"  # Required for JWKS fetching

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
